--- a/Front.html
+++ b/Front.html
@@ -41,7 +41,17 @@ case 6: x == 6
 Headline = "Coming up with these is hard"
 break;
 case 7: x == 7
-Headline
+    Headline = "Your chromebook contains 6$ worth of gold"
+break;
+case 8: x == 8
+Headline = "╱⚆⚆╲"
+break;
+case 9: x == 9
+Headline = "Go play a game"
+break;
+case 10: x == 10
+Headline = "Hello"
+break;
 }
 </script>  
 
